<resources>
    <string name="app_name">NewsApp</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="title">Title</string>
    <string name="published_date">Published Date</string>
    <string name="save_bookmark">Save Bookmark?</string>
    <string name="source">Source</string>
    <string name="description">description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="profile">Profile</string>
    <string name="profile_image"><![CDATA[https://media-exp1.licdn.com/dms/image/C5603AQFuvHU6CV6iFA/profile-displayphoto-shrink_400_400/0/1657595297419?e=1672272000&v=beta&t=gHUJ3s5u1aHK7MIHk48CXb6-Zh5ow7fRf1ahn5PFMkg]]></string>
    <string name="name">Name: Novri Lukman Zyarif</string>
    <string name="username_mansao01">Username: mansao01</string>
    <string name="my_username">mansao01</string>
    <string name="github_link">https://github.com/mansao01</string>
    <string name="search_hint">Search News</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="fill_email">Fill the email</string>
    <string name="fill_password">Fill the password</string>
    <string name="not_valid_email">Email Not Valid</string>
    <string name="not_valid_password">Password Not Valid</string>
    <string name="hello">Hello</string>
    <string name="registered">Register Berhasil</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="settings">Settings</string>
</resources>